# HamSay

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: to_PyPi.yml  to_testPyPi.yml
hamsay/: __init__.py  __main__.py  main.py
hamsay/hamsters/: __init__.py  hams.py
hamsay/help/: help.py
