[tool.poetry]
name = "hamsay"
version = "0.1.0"
description = "Hamsters talking"
authors = ["Sebastardo <sebastardo@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sebastardo/HamSay"
packages = [{include = "hamsay"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.8.0"
pylint = "^2.15.2"

[tool.poetry.scripts]
hamsay = "hamsay.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
